kubernetes/04-networkpolicy-denyall.yaml
# kubectl apply -f 04-networkpolicy-denyall.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
#  - Egress
